@@ -1,4 +1,4 @@
-/* Copyright (C) 1999,2000,2001,2003, 2006 Free Software Foundation, Inc.
+/* Copyright (C) 1999,2000,2001,2003, 2006, 2008 Free Software Foundation, Inc.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -15,7 +15,7 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
  */
 
-#include "libguile.h"
+#include <libguile.h>
 
 long asmob000;
 long asmob100;
