@@ -1,4 +1,4 @@
-/* Copyright (C) 1999,2000,2001,2003, 2006 Free Software Foundation, Inc.
+/* Copyright (C) 1999,2000,2001,2003, 2006, 2008 Free Software Foundation, Inc.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -17,8 +17,8 @@
 
 /* some bits originally by Jim Blandy <jimb@red-bean.com> */
 
-#include "libguile.h"
-#include "libguile/gh.h"
+#include <libguile.h>
+#include <libguile/gh.h>
 
 #include <assert.h>
 #include <string.h>
