@@ -1,6 +1,6 @@
 /* test-list.c - exercise libguile/list.c functions */
 
-/* Copyright (C) 2006 Free Software Foundation, Inc.
+/* Copyright (C) 2006, 2008 Free Software Foundation, Inc.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -17,7 +17,7 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
  */
 
-#include "libguile.h"
+#include <libguile.h>
 
 #include <stdio.h>
 #include <assert.h>
